--- a/html/contact.html
+++ b/html/contact.html
@@ -49,7 +49,7 @@
 			</aside>
 			<div id="mainpage">
 				<div id="content">
-					<form method="POST" action="https://formsubmit.co/pinbox.riverside663@passinbox.com" enctype="multipart/form-data">
+					<form method="POST" action="https://formsubmit.co/onihsetak@proton.me" enctype="multipart/form-data">
                         <h2>Kaitlyn's Mail</h2>
                         <input type="text" name="name" id="email" placeholder="Your Name"><br>
                         <input type="text" name="email" id="email" placeholder="Your E-Mail Address"><br>
