--- a/html/contact.html
+++ b/html/contact.html
@@ -49,9 +49,9 @@
 			</aside>
 			<div id="mainpage">
 				<div id="content">
-					<form>
-                        <h2>Kaitlyn's Mail</h2>
-                        <input type="text" name="name" id="email" placeholder="Your Name"><br>
+        	 	 <h2>Kaitlyn's Mail</h2>
+					<form method="POST" action="mailto:pinbox.riverside663@passinbox.com" enctype="multipart/form-data">
+                        <input type="text" name="name" id="name" placeholder="Your Name"><br>
                         <input type="text" name="email" id="email" placeholder="Your E-Mail Address"><br>
                         <label for="country">Country: </label>
                         <select name="country" id="country">
@@ -310,13 +310,13 @@
                             <option value="ZM">Zambia</option>
                             <option value="ZW">Zimbabwe</option>
                         </select>
-                        <textarea type="text" name="message" id="message" placeholder="Your Message"></textarea><br>
-                        <button>Send &#9825;</button>
-                    </form>
+                        <input type="text" name="subject" id="subject" placeholder="Subject">
+                        <textarea name="message" id="message" placeholder="Message"></textarea><br>
+                        <input type="submit" value="Send &#9825;">
+            	  </form>
 				</div>
 			</div>
 		</main>
 	</div>
 </body>
 </html>
-
