--- a/html/contact.html
+++ b/html/contact.html
@@ -39,10 +39,10 @@
 			<aside id="navbar">
 				<nav>
 					<ul>
-						<li><a href="../index.html">home</a></li>
-						<li><a href="blog.html">blog</a></li>
-						<li><a href="music.html">music</a></li>
-						<li><a href="links.html">links</a></li>
+						<li><a href="https://giggle-happy-paradise-fun.neocities.org/">home</a></li>
+						<li><a href="https://giggle-happy-paradise-fun.neocities.org/html/blog">blog</a></li>
+						<li><a href="https://giggle-happy-paradise-fun.neocities.org/html/music">music</a></li>
+						<li><a href="https://giggle-happy-paradise-fun.neocities.org/html/links">links</a></li>
 						<li><a href="contact.html">contact</a></li>
 					</ul>
 				</nav>
