--- a/html/contact.html
+++ b/html/contact.html
@@ -20,6 +20,10 @@
             width: 362px;
         }
 
+		#submit {
+			width: 20px;
+		}
+		
         textarea {
             width: 362px;
             padding-bottom: 300px;
@@ -312,7 +316,7 @@
                         </select>
                         <input type="text" name="subject" id="subject" placeholder="Subject">
                         <textarea name="message" id="message" placeholder="Message"></textarea><br>
-                        <input type="submit" value="Send &#9825;">
+                        <input type="submit" id="submit" value="Send &#9825;">
             	  </form>
 				</div>
 			</div>
