--- a/index.html
+++ b/index.html
@@ -31,14 +31,24 @@
 			</aside>
 			<div id="mainpage">
 				<div id="content">
-					<article>
+                    <p class="dropdown" tabindex="1">12/6/25 &#9662;</p>
+					<article id="first">
                         <h2>Welcome to my Webpage! :)</h2>
-						<p>Hi, my name is Kaitlyn. I enjoy programming, reading, and listening to music, so if you want to see my interests regarding all of those, please stay. Please. Please do. Please.<br><img src="assets/wavetransparent.gif" alt="mii gif" width="200px" height="200px" style="float: right; margin: 10px;"><br>On the left, you'll see the navbar. It's pretty self-explanatory I think. I'll add to the blog when I have a thought, the music page after I've listened to a significant amount, and the links whenever I find something cool on the internet (could be a book, recipe, article, etc.) Whenever I make a major update to the site, I'll mention it on this page. I don't have much going on, so feel free to spam my inbox in the contact section.</p>
+						<p>Hi, my name is Kaitlyn. I enjoy programming, reading, and listening to music, so if you want to see my interests regarding all of those, please stay. Please. Please do. Please.<br><img src="assets/wavetransparent.gif" alt="mii gif" width="200px" height="200px" style="float: right; margin: 10px;"><br>On the left, you'll see the navbar. It's pretty self-explanatory I think. I'll add to the blog when I have a thought, the music page after I've listened to a significant amount, and the links whenever I find something cool on the internet (could be a book, recipe, article, etc.) Whenever I make a major update to the site, I'll mention it on this page. I don't have much going on, so feel free to spam my inbox in the contact section.<br><br><i>Take care!</i><br><br>-Kaitlyn</p>
 					</article>
+                    <p class="dropdown" tabindex="1">12/7/25 &#9662;</p>
+                    <article>
+                        <h2>12/7/25 Changes:</h2>
+                        <ul>
+                            <li>Basic mailto functionality for the contact page (sorry, this server has no backend so it'll have to do for now. you need an email application).</li>
+                            <li>Added background image and a few more assets. I want to make this page super detailed in the future.</li>
+                            <li>New entries under Links.</li>
+                            <li>Dropdown tabs that kind of work.</li>
+                        </ul>
+                    </article>
 				</div>
 			</div>
 		</main>
 	</div>
 </body>
 </html>
-
