--- a/html/blog.html
+++ b/html/blog.html
@@ -25,15 +25,16 @@
 						<li><a href="blog.html">blog</a></li>
 						<li><a href="music.html">music</a></li>
 						<li><a href="links.html">links</a></li>
-						<li><a href="contact.html">contact</a></li>
+						<li><a href="https://kateshino.github.io/giggle-happy-paradise-fun/html/contact">contact</a></li>
 					</ul>
 				</nav>
 			</aside>
 			<div id="mainpage">
 				<div id="content">
-					<article>
-                        <h2>12/6/2025: The Website is Up</h2>
-                        <p>So far, I think it only took a few hours. Lots of fun doing it. It's very clearly not entirely done yet, so I'll work on adding more detail and functionality in the future while keeping up with the blog and music page. I tend to drop things after a <strong>very</strong> short amount of time so, to the few people that will see this, I'm not sure whether or not there will be many more updates. I'll try my best.<br>Not much else occurred today. I had wings. They were good.<br><br><i style="font-size: 10px;">Does everyone's life warrant a blog?</i><br><br>-Kaitlyn</p>
+                    <p class="dropdown" tabindex="1">12/6/25 &#9662;</p>
+					<article id="first">
+                        <h2><img src="../assets/angel.gif" alt="angel emoticon gif" style="transform: scaleX(-1);">12/6/2025: The Website is Up<img src="../assets/angel.gif" alt="angel emoticon gif"></h2>
+                        <p>So far, I think it only took a few hours. Lots of fun doing it. It's very clearly not entirely done yet, so I'll work on adding more detail and functionality in the future while keeping up with the blog and music page. I tend to drop things after a <strong>very</strong> short amount of time so, to the few people that will see this, I'm not sure whether or not there will be many more updates. I'll try my best.<br>Not much else occurred today. I had wings. They were good.<img src="../assets/singingtransparent.gif" alt="singing mii gif" width="150px" height="150px" style="float: right;"><br><br><i style="font-size: 10px;">Does everyone's life warrant a blog?</i><br><br>-Kaitlyn</p>
                     </article>
 				</div>
 			</div>
@@ -41,4 +42,3 @@
 	</div>
 </body>
 </html>
-
