--- a/html/links.html
+++ b/html/links.html
@@ -31,11 +31,18 @@
 			</aside>
 			<div id="mainpage">
 				<div id="content">
-					
+                    <article style="border: 0px; display: block;">
+					    <h2>Sources for the Site:</h2>
+                        <ul>
+                            <li><a href="https://pixelsea.neocities.org" target="__blank">pixelsea.neocities.org</a>: Many of the little gifs and emoticons on this site come from here. Also 10/10 UI.</li>
+                            <li><a href="https://textures.neocities.org" target="__blank">textures.neocities.org</a>: Background image comes from here. Recommended if you need a background image for your site, it contains many.</li>
+                            <li><a href="https://w3schools.com" target="__blank">w3schools.com</a>: I'm pretty sure no code was copied from here, but it was a massive help.</li>
+                            <li>And of course, <a href="https://neocities.org" target="__blank">neocities.org</a>. Thanks for having me! <img src="../assets/smileyspin.gif" alt="spinning smiley ball gif">                            
+                        </ul>     
+                    </article>               
 				</div>
 			</div>
 		</main>
 	</div>
 </body>
 </html>
-
